First commited as before_6770_rev1